세부사항 수정

--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -110,20 +110,42 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            >
+            android:fillViewport="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/iv_detail_board_contents_image"
+                    android:id="@+id/iv_basic_img_detailed"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@color/colorPrimary" />
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/img_basic_bottom"
+                    android:visibility="gone"/>
 
                 <RelativeLayout
+                    android:id="@+id/item_detailboard_img_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/iv_item_detailboard_contents_image_viewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="280dp"
+                        android:background="@color/colorPrimary"
+                        >
+                    </android.support.v4.view.ViewPager>
+
+                </RelativeLayout>
+
+
+
+                <RelativeLayout
+                    android:id="@+id/nuri"
+                    android:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -143,15 +165,11 @@
                             android:textColor="#000000" />
 
                     </RelativeLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="#ededed"
-                        />
 
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="52.5dp"
                     >
@@ -336,19 +354,19 @@
                         android:layout_alignParentBottom="true"
                         />
                 </RelativeLayout>
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/detail_board_reboard_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#f9f9f9"
-                    >
-                </android.support.v7.widget.RecyclerView>
+                    android:background="#f9f9f9"></android.support.v7.widget.RecyclerView>
 
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/nuri2"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:orientation="vertical"
@@ -359,12 +377,11 @@
             android:id="@+id/detail_board_reboard_img_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@color/transparent"
-            >
-        </android.support.v7.widget.RecyclerView>
+            android:background="@color/transparent"></android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
     <LinearLayout
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
