--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -41,6 +41,14 @@
                     android:layout_marginRight="5dp"
                     android:background="@drawable/bt_setting" />
 
+                <ImageView
+                    android:id="@+id/iv_btn_my_page_chat"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/bt_message" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="84.8dp"
