--- a/app/src/main/res/layout/activity_up_board.xml
+++ b/app/src/main/res/layout/activity_up_board.xml
@@ -69,7 +69,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="23dp"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:lineSpacingExtra="5sp"
                     android:text="수정"
                     android:textColor="#c45c55"
